# fractal-drawer

./: Application.cpp  CMakeLists.txt  Fractal Drawer.desktop  README.md  a.out  compile.sh  tudu.txt
dependencies/: glErrorHandling.h
include/glad/: glad.h
installers/: fractal-drawer-0.1.0-Linux.deb
res/shaders/: basic.shader  monochrome.shader  repeate_fractal.shader
scr/glfw/glfw-3.2.2/: adddir
src/: Camera.cpp  Camera.h  DrawnLines.cpp  DrawnLines.h  FractalRegion.cpp  FractalRegion.h  FractalSkeleton.cpp  FractalSkeleton.h  IndexBuffer.cpp  IndexBuffer.h  Input.cpp  Input.h  MouseButtonCallback.cpp  MouseButtonCallback.h  Renderer.cpp  Renderer.h  ScaleRotationMatrix.cpp  ScaleRotationMatrix.h  Shader.cpp  Shader.h  State.cpp  State.h  VertexArray.cpp  VertexArray.h  VertexBuffer.cpp  VertexBuffer.h  VertexBufferLayout.h  WindowCreator.cpp  WindowCreator.h  WindowResizeCallback.cpp  WindowResizeCallback.h  glErrorHandling.cpp  glad.c
src/Shapes/: Fractal.cpp  Fractal.h  Line.cpp  Line.h
src/glfw/glfw-3.2.2/docs/: placeholder
